force-app/main/default/objects/Tax_Lines__c/Tax_Lines__c.object-meta.xml
<CustomObject>
    <description>Tax Lines related to Invoice Line and Credit Note Line. Populated from Tax Engine via Mulesoft.</description>
    <label>Tax Lines</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Tax Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>