force-app/main/default/objects/Tax_Lines__c/fields/Admin_Zone_Level__c.field-meta.xml
<CustomField>
    <fullName>Admin_Zone_Level__c</fullName>
    <description>The zone level in which tax is actually administered.</description>
    <label>Admin Zone Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>