force-app/main/default/objects/Tax_Lines__c/fields/Alternate_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Exchange_Rate__c</fullName>
    <description>Exchange Rate Conversion Rate</description>
    <label>Alternate Exchange Rate</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>