force-app/main/default/objects/Tax_Lines__c/fields/Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Authority_Name__c</fullName>
    <description>The name of the current authority for which data is being returned.</description>
    <label>Authority Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>