force-app/main/default/objects/Tax_Lines__c/fields/Authority_Type__c.field-meta.xml
<CustomField>
    <fullName>Authority_Type__c</fullName>
    <description>The type of of authority (i.e. City Rental, State Sales/Use)</description>
    <label>Authority Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>