force-app/main/default/objects/Tax_Lines__c/fields/Credit_Note_Line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tax Lines for Credit Note Lines</description>
    <label>Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Tax Lines</relationshipLabel>
    <relationshipName>Tax_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>