force-app/main/default/objects/Tax_Lines__c/fields/Dual_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dual_Tax_Amount__c</fullName>
    <description>Dual Tax Amount as per Tax Jurisdiction</description>
    <label>Dual Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>