force-app/main/default/objects/Tax_Lines__c/fields/Dual_Tax_Currency__c.field-meta.xml
<CustomField>
    <fullName>Dual_Tax_Currency__c</fullName>
    <description>Dual Tax Currency as per Tax Jurisdiction</description>
    <label>Dual Tax Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>