force-app/main/default/objects/Tax_Lines__c/fields/Dual_Tax_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dual_Tax_Exchange_Rate__c</fullName>
    <description>Dual Tax Currency required by Tax Jurisdiction</description>
    <label>Dual Tax Exchange Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>