force-app/main/default/objects/Tax_Lines__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tax Lines for Invoice Line</description>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Tax Lines</relationshipLabel>
    <relationshipName>Tax_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>