force-app/main/default/objects/Tax_Lines__c/fields/Jurisdiction_Text__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Text__c</fullName>
    <description>The text returned by this authority&apos;s jurisdiction determination logic.</description>
    <label>Jurisdiction Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>