force-app/main/default/objects/Tax_Lines__c/fields/Local_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_Amount__c</fullName>
    <description>Local Tax Currency required by Tax Jurisdiction</description>
    <label>Local Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>