force-app/main/default/objects/Tax_Lines__c/fields/Local_Tax_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_Currency__c</fullName>
    <description>Local Tax Currency required by Tax Jurisdiction</description>
    <label>Local Tax Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>