force-app/main/default/objects/Tax_Lines__c/fields/Local_Tax_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax_Exchange_Rate__c</fullName>
    <description>Local Exchange Rate</description>
    <label>Local Tax Exchange Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>