force-app/main/default/objects/Tax_Lines__c/fields/Nature_of_Tax__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Tax__c</fullName>
    <description>Nature of Tax</description>
    <label>Nature of Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>