force-app/main/default/objects/Tax_Lines__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Product of Tax Lines</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Tax Lines</relationshipLabel>
    <relationshipName>Tax_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>