force-app/main/default/objects/Tax_Lines__c/fields/Tax_Code_F__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_F__c</fullName>
    <description>ERP Tax Code</description>
    <formula>Nature_of_Tax__c&amp;&apos;_&apos;&amp;Zone_Level__c</formula>
    <label>Tax Code (F)</label>
    <type>Text</type>
</CustomField>