force-app/main/default/objects/Tax_Lines__c/fields/Tax_LE_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_LE_Currency_Amount__c</fullName>
    <description>Tax Currency of Legal Entity converted Amount</description>
    <label>Tax LE Currency Amount</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>