force-app/main/default/objects/Tax_Lines__c/fields/Taxable_City__c.field-meta.xml
<CustomField>
    <fullName>Taxable_City__c</fullName>
    <description>Taxable City</description>
    <label>Taxable City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>