force-app/main/default/objects/Tax_Lines__c/fields/Taxable_Country__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Country__c</fullName>
    <description>Taxable Country</description>
    <label>Taxable Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>