force-app/main/default/objects/Tax_Lines__c/fields/Taxable_County__c.field-meta.xml
<CustomField>
    <fullName>Taxable_County__c</fullName>
    <description>Taxable County</description>
    <label>Taxable County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>