force-app/main/default/objects/Tax_Lines__c/fields/Taxable_State__c.field-meta.xml
<CustomField>
    <fullName>Taxable_State__c</fullName>
    <description>Taxable State</description>
    <label>Taxable State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>