force-app/main/default/objects/Tax_Lines__c/fields/Zone_Level__c.field-meta.xml
<CustomField>
    <fullName>Zone_Level__c</fullName>
    <description>Zone Level</description>
    <label>Zone Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>