force-app/main/default/objects/Tax_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Amount__c</columns>
    <columns>Invoice_Line__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>